# arc-starter

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  SHARING.md  pyproject.toml  setup.ps1  setup.sh
.claude/: settings.json
.codex/: config.toml  hooks.json
.firecrawl/: amazonq-search.json  amp-changelog-search.json  amp-manual.md  amp-news-custom-agents.md  amp-news-neo.md  amp-news-search.json  amp-plugin-api.md  amp-release-search.json  amp-search.json  claude-code-env-vars.md  claude-code-hooks.md  claude-code-settings.md  claude-code-whats-new.md  claude-hooks.json  claude-w13.md  claude-w19.md  claude-w20.md  codex-search.json  cursor-cli.md  cursor-hooks-blog.md  cursor-hooks.md  cursor-search.json  gemini-changelog-latest.md  gemini-changelog.md  gemini-config-reference.md  gemini-config.md  gemini-ext-reference.md  gemini-extensions.md  gemini-gh-config.md  gemini-gh-config2.md  gemini-hooks-reference.md  gemini-hooks.md  gemini-search.json  gemini-settings.md  gemini-tools-api.md  google-blog-gemini-hooks.md  openai-codex-changelog.md  openai-codex-config-basic.md  openai-codex-config.md  openai-codex-env-vars.md  (+13 more)
.obsidian/: app.json
arc_starter/: __init__.py
context/: agent-learnings.md  business.md  founder.md  memory.md  overview.md  priorities.md  setup-status.md  sharing.md  stack.md  workspace.md
extensions/: wiki-query-mcp.example.json
guides/: context-hygiene.md  mcps-explained.md  next-steps.md  privacy-and-imports.md  session-roadmap.md  skills-explained.md  troubleshooting.md  update-prompt.md  what-is-this.md  (+2 more)
(+84 files in other folders)
