[project]
name = "arc-starter"
version = "0.1.0"
description = "ARC — AI Operating Partner with LLM-maintained wiki knowledge base"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.29",
    "openai>=1.30.0",
    "python-dotenv>=1.0.0",
    "tzdata>=2024.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
